# ShowWindows

./: .clang-format  .gitignore  BugLog.md  CMakeLists.txt  Project_Config.h  README.md  clang-format.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingconfig.cpp  settingconfig.h  settingconfig.ui
.config/: setting.json
AxesFreshTask/: axesfreshtask.cpp  axesfreshtask.h
CaptureShowTask/: CaptureShowTask.cpp  CaptureShowTask.h
CaptureTask/: CaptureTask.cpp  CaptureTask.h
Docs/: .$ShowWindows.drawio.bkp  ShowWindows.drawio
FftFreshTask/: fftfreshtask.cpp  fftfreshtask.h
ImageProcess/: ImageProcess.cpp  ImageProcess.h
ImageProcessTask/: ImageProcessTask.cpp  ImageProcessTask.h
MatQueue/: SingletonMatQueue.cpp  SingletonMatQueue.h
Utility/AnsysSetting/: ansyssetting.cpp  ansyssetting.h
Utility/fft/: FFTfromCSV.cpp  fft_from_csv.cpp  fft_from_csv.h
Utility/fftw-3.3.5-dll64/include/: fftw3.h
Utility/fftw-3.3.5-dll64/lib/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
